fix l-project-pagination on safari

--- a/sources/dronesapp-web/angular/src/app/components/lists/l-project-pagination/l-project-pagination.component.styl
+++ b/sources/dronesapp-web/angular/src/app/components/lists/l-project-pagination/l-project-pagination.component.styl
@@ -5,6 +5,8 @@
   &__item
     border: 1px solid #ccc
     border-left-width: 0
+    display: flex
+    align-items: stretch
     &:first-child
       border-left-width: 1px
   &__link
@@ -18,7 +20,6 @@
 
     &._next
     &._prev
-      height: 100%
       &:after
         hv()
         width: 8px
@@ -38,7 +39,6 @@
 
     &._start
     &._end
-      height: 100%
       &:before
       &:after
         hv()
